--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ htb/
 irl/
 hypermedia-systems/
 "languages/C Programming - A Modern Approach - 2nd_Ed(C89, c99) - King by .pdf"
+"cybersec/[2019] LINUX BASICS FOR HACKERS [OTW].pdf"
